--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
-            <img class="profile" src="" alt="Profile Picture"/>
+            <img class="profile" src="assets/images/hero.jpg" alt="Profile Picture"/>
             <div>
                 <h2>Full Stack Developer</h2>
             </div>
