styled more of the header and body

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
-            <img class="profile" src="assets/images/hero.jpg" alt="Profile Picture"/>
+            <img class="profile" src="" alt="Profile Picture"/>
             <div>
                 <h2>Full Stack Developer</h2>
             </div>
@@ -40,18 +40,15 @@
             <div class="flex-row">
               <h2 class="section-title">About Me</h2> 
             </div>
-            <div class="step-info">
-                <div class="vl-border1">
-            </div>
                 <div class="step-text">
                     <p>
-                        My name is Ethan Brockway and I currently live in Edgerton, Missouri. I play a lot of video games and like to watch anime. 
+                        My name is Ethan Brockway and I currently live in Edgerton, Missouri. </br> I play a lot of video games and like to watch anime. 
                     </p>
                 </div>
          </section>
 
           <!-- Work section -->
-        <section id="work" class="about">
+        <section id="work-done" class="work">
             <div class="flex-row">
               <h2 class="section-title">Work done</h2> 
             </div>
@@ -73,7 +70,7 @@
         </section>
 
          <!-- Contact me section -->
-         <section id="contact-me" class="about">
+         <section id="contact-me" class="contact">
             <div class="flex-row">
                 <h2 class="section-title">Contact Me</h2> 
             </div>
