--- a/index.html
+++ b/index.html
@@ -48,23 +48,17 @@
           <!-- Work section -->
         <section id="work-done" class="work">
             <div class="flex-row">
-              <h2 class="section-title">Work done</h2> 
+              <h2 class="section-title">Finished Projects</h2> 
             </div>
-            <div class="step-info">
-                <div class="vl-border2">
-                </div>
-                <!--CSS grid of images-->
                 <div class="container">
                    <div class="gallery">                       
-                    <figure class="runbuddy">
-                        <a href="">
-                            <img src="" class="runbuddyapp" alt="Run buddy website">
-                            <figcaption>Run Buddy</figcaption>                 
+                    <figure class="run-buddy">
+                        <a href="https://skronkie.github.io/run-buddy/">
+                            <img src="assets/images/run-buddy.jpg" class="run-buddy-app" alt="Run buddy website">
                         </a>
                         </figure>
                     </div>
                 </div>
-            </div>
         </section>
 
          <!-- Contact me section -->
