added to readme and profile picture

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
-            <img class="profile" src="" alt="Profile Picture"/>
+            <img class="profile" src="./assets/images/profile-pic.jpg" alt="Profile Picture"/>
             <h2>Full Stack Developer</h2>
         </section>
 
@@ -76,7 +76,7 @@
                     <a href="#email">ebrockway01@gmail.com</a>
                 </li>
                 <li>
-                    <a href="github">Github</a>
+                    <a href="#github">Github</a>
                 </li>
             </ul>
         </div>
